docs/7.52/md/abapset_run_time_clock_resolution.md
---
title: "SET RUN TIME CLOCK RESOLUTION"
description: |
  Quick Reference(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_run_time_clock_shortref.htm) Syntax SET RUN TIME CLOCK RESOLUTION HIGHLOW. Effect This statement specifies the precision with which the statement GET RUN TIME(https://help.sap.com/doc/abapdocu_752_index_h
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_run_time_clock_resolution.htm"
abapFile: "abapset_run_time_clock_resolution.htm"
keywords: ["do", "if", "try", "class", "data", "abapset", "run", "time", "clock", "resolution"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [program editing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenprogram_editing.htm) →  [Testing and Checking Programs](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_tests.htm) →  [Runtime Measurements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_runtime_measurements.htm) → 

SET RUN TIME CLOCK RESOLUTION

[Quick Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapset_run_time_clock_shortref.htm)

Syntax

SET RUN TIME CLOCK RESOLUTION *{*HIGH*|*LOW*}*.

Effect

This statement specifies the precision with which the statement [GET RUN TIME](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapget_run_time.htm) is measured. It can be changed in a program only before the statement GET RUN TIME is executed for the first time, otherwise a non-handleable exception is raised.

Specifying HIGH defines a level of precision of one microsecond. If the level of precision is high, this can produce false time values for multi-processors, since the clocks of the individual processors are not always regularly synchronized on all platforms. The high level of precision on the following platforms always returns correct values:

-   AIX
    
-   SINIX
    
-   SUN-OS
    
-   Linux
    
-   IBM i5/OS (previously OS/400)
    
-   Windows NT
    

To avoid incorrect time values on the other platforms, LOW can be used to specify a low precision measurement whose resolution depends on each platform.

Without the preceding statement SET RUN TIME CLOCK RESOLUTION, GET RUN TIME uses the high precision measurement implicitly.

Notes

-   To execute multiple measurements with different levels of precision within an [internal session](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abeninternal_session_glosry.htm "Glossary Entry"), the class CL\_ABAP\_RUNTIME can be used (see [Class for Runtime Measurements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencl_abap_runtime.htm)).
    
-   No exception is raised if SET RUN TIME CLOCK RESOLUTION is used after the statement GET RUN TIME as long as the level of precision is not changed.
    

Example

Uses SET RUN TIME CLOCK RESOLUTION in front of GET RUN TIME.

SET RUN TIME CLOCK RESOLUTION LOW.
GET RUN TIME FIELD DATA(t1).
wait UP TO 1 SECONDS.
GET RUN TIME FIELD DATA(t2).
cl\_demo\_output=>display( t2 - t1 ).

[Exceptions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_language_exceptions.htm)

Non-Handleable Exceptions

-   Cause: An attempt was made to change the level of precision after [GET RUN TIME](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapget_run_time.htm) using SET RUN TIME CLOCK RESOLUTION.
    Runtime error: SET\_RUN\_TIME\_CLOCK\_ERROR